  * Several patches for improved Musicbrainz support from Martin Michlmayr:
    + add musicbrainz support for FLAC files with embedded cue files.
      Closes: #669139
    + Don't submit to CDDB server when using musicbrainz
      Closes: #669140
    + Don't tag CDDB string with musicbrainz id
      Closes: #669141

  [ Colin Tuckley ]
  * replace deprecated egrep with grep -E (Closes issue 24)
  * clean up indentation on older changelog entries

 -- Colin Tuckley <colint@debian.org>  Wed, 18 Apr 2012 15:54:24 +0100

abcde 2.5.0

  * Bumped to 2.5.0
  * Add support for Musicbrainz using a perl helper script.
    Closes: #665970
  * Tweak man page. Thanks to Mats Erik Andersson for the patch.
    Closes: #627237
  * Make the -q option work again. Thanks to A Mennucc for the patch.
    Closes: #562522

 -- Steve McIntyre <93sam@debian.org>  Fri, 13 Apr 2012 22:29:45 +0100

abcde 2.4.2

  * Bumped to 2.4.2
  * Fix Cue file always references "dummy.wav" bug
    patch from Chris Chiappa (Closes: #459928).
  * Whitespace cleanup, replace single perl instance with sed 
    (Charles Steinkuehler)
  * Fix leadin/leadout computation for cue files broken bug
    Patch from Martin Michlmayr (Closes: #582175).

 -- Colin Tuckley <colint@debian.org>  Sat, 29 May 2010 09:43:01 +0100

abcde 2.4.1

  * Bumped to 2.4.1
  * In manpage note a 2nd use for LOWDISK (or '-l' switch)
    it's faster and better on scratchy disks (Closes: #426343).
  * Add configurable options for replaygain tools.
  * Fix syntax error in tagged speex command (Closes: #554406)
    Ubuntu patch by Michael Helmling.
  * Fix mp3 tagging fails for single author albums (Closes: #554030)

 -- Colin Tuckley <colint@debian.org>  Sun, 14 Feb 2010 13:09:47 +0000

abcde 2.4.0

  * Bumped to 2.4
  * Corrected REDIR redirection, this time with ifs instead of variable
    substitution, which did not work (Closes: #527191).
  * Added TPE2 for Various artists definition (Closes: #521669).